--- a/PEP_HW/.cproject
+++ b/PEP_HW/.cproject
@@ -73,6 +73,7 @@
 									<listOptionValue builtIn="false" value="&quot;${StudioSdkPath}/util/third_party/freertos/Demo/Common/include&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${StudioSdkPath}/util/third_party/freertos/Source/portable/GCC/ARM_CM3&quot;"/>
 								</option>
+								<option id="gnu.c.compiler.option.misc.other.1571639610" name="Other flags" superClass="gnu.c.compiler.option.misc.other" value="-save-temps -c -fmessage-length=0" valueType="string"/>
 								<inputType id="com.silabs.ide.si32.gcc.cdt.managedbuild.tool.gnu.c.compiler.input.202610850" superClass="com.silabs.ide.si32.gcc.cdt.managedbuild.tool.gnu.c.compiler.input"/>
 							</tool>
 							<tool id="com.silabs.ide.si32.gcc.cdt.managedbuild.tool.gnu.cpp.compiler.base.320070627" name="GNU ARM C++ Compiler" superClass="com.silabs.ide.si32.gcc.cdt.managedbuild.tool.gnu.cpp.compiler.base">
