--- a/PEP_HW/GNU ARM v4.9.3 - Debug/makefile
+++ b/PEP_HW/GNU ARM v4.9.3 - Debug/makefile
@@ -11,6 +11,7 @@ RM := rm -rf
 -include src/SystemClock/subdir.mk
 -include src/StatusInd/subdir.mk
 -include src/MessengerUART/subdir.mk
+-include src/MesTemperature/subdir.mk
 -include src/Init/subdir.mk
 -include src/CommandFromUART/subdir.mk
 -include src/subdir.mk
@@ -39,7 +40,7 @@ all: PEP_HW.axf
 PEP_HW.axf: $(OBJS) $(USER_OBJS)
 	@echo 'Building target: $@'
 	@echo 'Invoking: GNU ARM C Linker'
-	arm-none-eabi-gcc -g -gdwarf-2 -mcpu=cortex-m3 -mthumb -T "PEP_HW.ld" -Xlinker --gc-sections -Xlinker -Map="PEP_HW.map" --specs=nano.specs -u _printf_float -o PEP_HW.axf "./BSP/bsp_stk_buttons.o" "./BSP/bsp_stk_leds.o" "./CMSIS/EFM32GG/startup_gcc_efm32gg.o" "./CMSIS/EFM32GG/system_efm32gg.o" "./Drivers/retargetio.o" "./Drivers/retargetserial.o" "./Drivers/udelay.o" "./FreeRTOS/efm32gg/event_groups.o" "./FreeRTOS/efm32gg/heap_2.o" "./FreeRTOS/efm32gg/list.o" "./FreeRTOS/efm32gg/port_gcc.o" "./FreeRTOS/efm32gg/queue.o" "./FreeRTOS/efm32gg/tasks.o" "./FreeRTOS/efm32gg/timers.o" "./emlib/em_adc.o" "./emlib/em_assert.o" "./emlib/em_cmu.o" "./emlib/em_core.o" "./emlib/em_emu.o" "./emlib/em_gpio.o" "./emlib/em_rtc.o" "./emlib/em_system.o" "./emlib/em_usart.o" "./src/CommandFromUART/CommandFromUART.o" "./src/Init/Init.o" "./src/MessengerUART/MessengerUART.o" "./src/StatusInd/StatusInd.o" "./src/SystemClock/SystemClock.o" "./src/main.o" -Wl,--start-group -lgcc -lc -lnosys -Wl,--end-group
+	arm-none-eabi-gcc -g -gdwarf-2 -mcpu=cortex-m3 -mthumb -T "PEP_HW.ld" -Xlinker --gc-sections -Xlinker -Map="PEP_HW.map" --specs=nano.specs -u _printf_float -o PEP_HW.axf "./BSP/bsp_stk_buttons.o" "./BSP/bsp_stk_leds.o" "./CMSIS/EFM32GG/startup_gcc_efm32gg.o" "./CMSIS/EFM32GG/system_efm32gg.o" "./Drivers/retargetio.o" "./Drivers/retargetserial.o" "./Drivers/udelay.o" "./FreeRTOS/efm32gg/event_groups.o" "./FreeRTOS/efm32gg/heap_2.o" "./FreeRTOS/efm32gg/list.o" "./FreeRTOS/efm32gg/port_gcc.o" "./FreeRTOS/efm32gg/queue.o" "./FreeRTOS/efm32gg/tasks.o" "./FreeRTOS/efm32gg/timers.o" "./emlib/em_adc.o" "./emlib/em_assert.o" "./emlib/em_cmu.o" "./emlib/em_core.o" "./emlib/em_emu.o" "./emlib/em_gpio.o" "./emlib/em_i2c.o" "./emlib/em_rtc.o" "./emlib/em_system.o" "./emlib/em_usart.o" "./src/CommandFromUART/CommandFromUART.o" "./src/Init/Init.o" "./src/MesTemperature/MesTemperature.o" "./src/MessengerUART/MessengerUART.o" "./src/StatusInd/StatusInd.o" "./src/SystemClock/SystemClock.o" "./src/main.o" -Wl,--start-group -lgcc -lc -lnosys -Wl,--end-group
 	@echo 'Finished building target: $@'
 	@echo ' '
 
